# stock-sentinel

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.ntfy.yaml  docker-compose.yml  py.py  sentinel-ui.html  stock-sentinel.db  stock-sentinel.db-shm  stock-sentinel.db-wal  test.http  ui.html  ui2.html  ui3.html
examples/: tls_check.rs
src/: auth.rs  backtest.rs  data.rs  db.rs  finnhub_extra.rs  indicators.rs  main.rs  news.rs  ollama.rs  pipeline.rs  portfolio.rs  ratelimit.rs  risk.rs  routes.rs  scanner.rs  state.rs  strategy.rs  telegram.rs  themes.rs
src/ai/: ollama_service.rs
src/analysis/: technical.rs
src/data/: alphavantage.rs  digest.rs  fetcher.rs  mod.rs  twelvedata.rs
src/db/: mod.rs  signal.rs
src/macros/: cache.rs  mod.rs  news_fetcher.rs  themes.rs
src/notifier/: mod.rs  multi.rs  ntfy.rs  telegram.rs
