[package]
name = "stock-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
dashmap = "6"
tower-http = { version = "0.7", features = ["cors", "trace"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.24", features = ["v4"] }
ta = { version = "0.5", features = ["serde"] }
scraper = "0.27"
